content/sensu-go/6.1/plugins/supported-integrations/servicenow.md
---
title: "ServiceNow integration"
linkTitle: "ServiceNow"
description: "Use the Sensu ServiceNow Handler plugin to integrate Sensu with your existing ServiceNow workflows. Read about the features of Sensu's ServiceNow integration and learn how to get the plugin."
version: "6.1"
product: "Sensu Go"
menu: 
  sensu-go-6.1:
    parent: supported-integrations
---

**COMMERCIAL FEATURE**: Access the Sensu ServiceNow Handler integration in the packaged Sensu Go distribution.
For more information, see [Get started with commercial features][6].

The Sensu ServiceNow Handler plugin is a Sensu [handler][1] that creates and updates ServiceNow incidents and events based on observation data from Sensu events.

{{% notice note %}}
**NOTE**: The Sensu ServiceNow Handler plugin is an example of Sensu's incident, event, and inventory management integrations.
To find more integrations, search [Bonsai, the Sensu asset index](https://bonsai.sensu.io/).
{{% /notice %}}

## Features

**NEED TO COMPLETE** Can use environment variables and secrets management to avoid exposing your ServiceNow API token, username/password, and other sensitive information? Does event-based templating apply for the ServiceNow integration? Are there other features to add here?

- Automatically creates a ServiceNow Configuration Item if none currently exists for a particular Sensu entity.
- Tunable arguments: use Sensu annotations to set custom incident notes, event information, Configuration Item descriptions, and more in ServiceNow.
- [Event-based templating][2]: include observation data from event attributes to add meaningful, actionable context to ServiceNow incidents, events, and Configuration Items.

## Get the plugin

For a turnkey experience with the Sensu ServiceNow Handler plugin, use one of our curated, configurable quick-start templates:

- [ServiceNow Incident Management][7]: send Sensu observability alerts to ServiceNow Incident Management.
- [ServiceNow Event Management][3]: send Sensu observability data to ServiceNow Event Management.
- [ServiceNow Configuration Management Database (CMDB)][8]: register Sensu entities as configuration items in ServiceNow CMDB.

You can also add the [Sensu ServiceNow Handler plugin][4] with a dynamic runtime asset from Bonsai, the Sensu asset index, to build your own workflow or integrate Sensu with your existing ServiceNow workflows.
[Dynamic runtime assets][5] are shareable, reusable packages that make it easier to deploy Sensu plugins.


[1]: ../../../observability-pipeline/observe-process/handlers/
[2]: ../../../observability-pipeline/observe-process/handler-templates/
[3]: https://github.com/sensu-community/monitoring-pipelines/blob/latest/event-storage/servicenow-events.yaml
[4]: https://bonsai.sensu.io/assets/sensu/sensu-servicenow-handler
[5]: ../../assets
[6]: ../../../commercial/
[7]: https://github.com/sensu-community/monitoring-pipelines/blob/latest/incident-management/servicenow-incident.yaml
[8]: https://github.com/sensu-community/monitoring-pipelines/blob/latest/entity-registration/servicenow-cmdb.yaml
